# Kairos

./: .env.example  .env.proxy.example  .gitignore  CLAUDE.md  README.md  SPEC_KAIROS.md  makefile  pyproject.toml
.github/workflows/: release.yml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/python/: kairos_boot.py
android/app/src/main/res/animator/: kairos_splash_wedge_sweep.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml  kairos_splash_icon.xml  kairos_splash_icon_base.xml
android/app/src/main/res/mipmap/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
app/: android_launcher.py  config.py  desktop_browser.py  git_credentials.py  gitlab_direct.py  launcher.py  main.py  pilotage_link.py  secret_store.py  settings_fields.py  settings_sections.py  settings_store.py  subprocess_env.py  tasks_db.py  tasks_dependencies.py  tasks_gitlab_sync.py  tasks_models.py  tasks_recurrence.py  tasks_scheduling.py  tasks_seed.py  tasks_staleness.py  tasks_stats.py  tasks_time.py  workdays.py
app/calendar/: __init__.py  google_calendar_source.py  google_oauth.py  timetree_source.py
deploy/: kairos.service
docs/: ANDROID_PACKAGING.md  DESIGN_SYSTEM.md  FDROID.md  IOS.md
docs/spec/: README.md  accueil-navigation.md  dependances.md  integrations-externes.md  modele-donnees.md  notes-capture.md  ordonnancement.md  packaging-lancement.md  recurrence.md  reglages-secrets.md  statistiques.md  temps-reel-chrono.md  vue-jour-gtd.md
packaging/: README.md  android-requirements.txt  kairos.spec  make_icon.py  smoke_test.py
static/: manifest.webmanifest  style.css
tasks/: plan.md  todo.md
templates/: _icons.html  _kairos_backlog.html  _kairos_banners.html  _kairos_day.html  _kairos_filters.html  _kairos_macros.html  _notes_list.html  base.html  home.html  kairos.html  kairos_stats.html  notes.html  oauth_result.html  settings.html
tests/: conftest.py  test_android_launcher.py  test_config.py  test_git_credentials.py  test_gitlab_direct.py  test_google_calendar_source.py  test_google_oauth.py  test_kairos_route.py  test_launcher.py  test_notes_route.py  test_secret_store.py  test_settings_route.py  test_settings_store.py  test_subprocess_env.py  test_tasks_dependencies.py  test_tasks_gitlab_sync.py  test_tasks_models.py  test_tasks_recurrence.py  test_tasks_scheduling.py  test_tasks_seed.py  test_tasks_staleness.py  test_tasks_stats.py  test_tasks_time.py  test_timetree_source.py  test_workdays.py
(+2 files in other folders)
