[project]
name = "kairos"
version = "1.0.0"
description = "« Kairos » : dashboard personnel de tâches — ordonnancement WSJF, time blocking, deep work, statistiques"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "timetree-exporter>=0.8,<0.9",
    "httpx>=0.27",
    "markdown>=3.6",
    "platformdirs>=4.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[project.scripts]
kairos = "app.launcher:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
